feat: Add Telegram message service and update WhatsApp DTOs, services, and core application components.